# trajectory_estimation

./: .gitignore  CMakeLists.txt  README  package.xml
include/KFilter/kalman/: kfilter_impl.hpp
include/OpenSURFcpp/: makefile  surf
include/OpenSURFcpp/src/: surflib.h
include/visual_odometry/: io.h  vo_features.h
src/: featureExtraction.cpp  feature_detection.cpp  read.cpp  visodo.cpp  visual_odometry.cpp  write.cpp
